// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleCornerstone should render correctly 1`] = `
<DocumentFragment>
  <span
    class="m-cornerstone cornerstone"
    itemscope=""
    itemtype="https://schema.org/ItemList"
    role="list"
  >
    <li
      class="m-cornerstone__item--center"
    >
      <h3
        class="is-centered c-type--h3 m-cornerstone__headline"
      >
        professionalExperience
      </h3>
    </li>
    <li
      class="m-cornerstone__item--left"
      itemprop="itemListElement"
      itemscope=""
      itemtype="https://schema.org/EmployeeRole"
    >
      <div
        class="m-cornerstone__description"
      >
        <div
          class="m-cornerstone__description-content"
        >
          <h4
            class="is-centered c-type--h4 m-cornerstone__headline"
            itemprop="roleName"
          >
            headline
          </h4>
          <p
            class="c-type--p m-cornerstone__company"
          >
            <strong>
              lead
            </strong>
          </p>
          <p
            class="c-type--p m-cornerstone__time"
            itemprop="description"
          >
            (
            <time
              class="c-time"
              itemprop="startDate"
            >
              20161212
            </time>
             -
            <time
              class="c-time"
            >
              20161224
            </time>
            )
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description1
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description2
          </p>
        </div>
      </div>
      <div
        class="m-cornerstone__bubble"
      />
    </li>
    <li
      class="m-cornerstone__item--center"
    >
      <h3
        class="is-centered c-type--h3 m-cornerstone__headline"
      >
        academicEducation
      </h3>
    </li>
    <li
      class="m-cornerstone__item--left"
      itemprop="itemListElement"
      itemscope=""
      itemtype="https://schema.org/EducationEvent"
    >
      <div
        class="m-cornerstone__description"
      >
        <div
          class="m-cornerstone__description-content"
        >
          <h4
            class="is-centered c-type--h4 m-cornerstone__headline"
            itemprop="name"
          >
            headline
          </h4>
          <p
            class="c-type--p m-cornerstone__company"
            itemprop="alternateName"
          >
            <strong>
              lead
            </strong>
          </p>
          <p
            class="c-type--p m-cornerstone__time"
          >
            (
            <time
              class="c-time"
              itemprop="startDate"
            >
              20161212
            </time>
             - 
            <time
              class="c-time"
              itemprop="endDate"
            >
              20161224
            </time>
            )
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description1
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description2
          </p>
        </div>
      </div>
      <div
        class="m-cornerstone__bubble"
      />
      <div
        hidden=""
        itemprop="location"
        itemscope=""
        itemtype="https://schema.org/Place"
      >
        <div
          itemprop="address"
          itemscope=""
          itemtype="http://schema.org/PostalAddress"
        />
      </div>
    </li>
    <li
      class="m-cornerstone__item--start"
    >
      <div
        class="m-cornerstone__bubble c-font-icon--bookmark2"
      />
    </li>
    Module Cornerstone Children
  </span>
</DocumentFragment>
`;

exports[`ModuleCornerstone should render no itemType if unset 1`] = `
<DocumentFragment>
  <span
    class="m-cornerstone cornerstone"
    role="list"
  >
    <li
      class="m-cornerstone__item--center"
    >
      <h3
        class="is-centered c-type--h3 m-cornerstone__headline"
      >
        professionalExperience
      </h3>
    </li>
    <li
      class="m-cornerstone__item--left"
      itemprop="itemListElement"
      itemscope=""
      itemtype="https://schema.org/EmployeeRole"
    >
      <div
        class="m-cornerstone__description"
      >
        <div
          class="m-cornerstone__description-content"
        >
          <h4
            class="is-centered c-type--h4 m-cornerstone__headline"
            itemprop="roleName"
          >
            headline
          </h4>
          <p
            class="c-type--p m-cornerstone__company"
          >
            <strong>
              lead
            </strong>
          </p>
          <p
            class="c-type--p m-cornerstone__time"
            itemprop="description"
          >
            (
            <time
              class="c-time"
              itemprop="startDate"
            >
              20161212
            </time>
             -
            <time
              class="c-time"
            >
              20161224
            </time>
            )
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description1
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description2
          </p>
        </div>
      </div>
      <div
        class="m-cornerstone__bubble"
      />
    </li>
    <li
      class="m-cornerstone__item--center"
    >
      <h3
        class="is-centered c-type--h3 m-cornerstone__headline"
      >
        academicEducation
      </h3>
    </li>
    <li
      class="m-cornerstone__item--left"
      itemprop="itemListElement"
      itemscope=""
      itemtype="https://schema.org/EducationEvent"
    >
      <div
        class="m-cornerstone__description"
      >
        <div
          class="m-cornerstone__description-content"
        >
          <h4
            class="is-centered c-type--h4 m-cornerstone__headline"
            itemprop="name"
          >
            headline
          </h4>
          <p
            class="c-type--p m-cornerstone__company"
            itemprop="alternateName"
          >
            <strong>
              lead
            </strong>
          </p>
          <p
            class="c-type--p m-cornerstone__time"
          >
            (
            <time
              class="c-time"
              itemprop="startDate"
            >
              20161212
            </time>
             - 
            <time
              class="c-time"
              itemprop="endDate"
            >
              20161224
            </time>
            )
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description1
          </p>
          <p
            class="c-type--p m-cornerstone__text"
            itemprop="description"
          >
            description2
          </p>
        </div>
      </div>
      <div
        class="m-cornerstone__bubble"
      />
      <div
        hidden=""
        itemprop="location"
        itemscope=""
        itemtype="https://schema.org/Place"
      >
        <div
          itemprop="address"
          itemscope=""
          itemtype="http://schema.org/PostalAddress"
        />
      </div>
    </li>
    <li
      class="m-cornerstone__item--start"
    >
      <div
        class="m-cornerstone__bubble c-font-icon--bookmark2"
      />
    </li>
    Module cornerstone children
  </span>
</DocumentFragment>
`;

exports[`ModuleCornerstone should return null if no content is empty 1`] = `<DocumentFragment />`;
